2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp:
	Add (CTermView::HyperLinkHitTest)

	* src/mainframe.cpp:
	Add a "Reconnect" toolbar button and a "URL bar".
	Fix the ineffective CharPaddingX & CharPaddingY.

	* src/pcmanx_pure_gtk2.cpp
	* src/telnetview.cpp (CTelnetView::OnRButtonDown):
	Add "Copy URL" popup menu.
	
	* src/generalprefpage.cpp:
	Add "AntiAlias" option.

	* src/telnetcon.cpp 
	(CTelnetCon::Connect), 
	(CTelnetCon::ConnectThread), 
	(CTelnetCon::OnConnect), 
	(CTelnetCon::Cleanup):
	Better handling of multi-threading that prevent some crashes caused by 
	thread-unsafe libraries on some platforms.
	Limit the number of concurrent running threads to prevent explosive 
	increase on socket operation which often leads to connection failure.

2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp:
	Apply patch file provided by chinsan.
	Make some modification to enable compilation on FreeBSD.

2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp, 
	src/termview.cpp:
	(CTermView::UpdateCaretPos) : Added
	(CTermData::UpdateCaret) : Removed
	Update position of IM cursor correctly.

	* src/editfavdlg.cpp:
	Enable editing of site settings by double clicking on the list.

	* src/pcmanx_inverse_xpm.xpm, 
	src/Makefile.am, 
	src/mainframe.cpp,
	src/mainframe.h:
	(CMainFrame::FlashWindow): Flash window icon to notify the user there's 
	new incomming message.
	(CMainFrame::IsActivated): Function to determine whether the main window
	is activated or not.

	* src/sitelistdlg.cpp:
	Enable searching by hitting 'Enter' key.

2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/site.cpp (CSite::SaveToFile):
	Minor bug fix for UseExternalTelnet.

	* src/telnetcon.cpp (CTelnetCon::OnSocket), (CTelnetCon::OnRecv):
	Fix a serious bug and prevent invalid io channel operation.

2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp (CTermData::UpdateCaret):